[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gacrux.gd" type="Script" id=1]
[ext_resource path="res://RSSReader.gd" type="Script" id=2]

[node name="Gacrux" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RSSReader" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="RSSReader"]

[node name="VBoxContainer" type="VBoxContainer" parent="RSSReader"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppBar" type="HBoxContainer" parent="RSSReader/VBoxContainer"]
margin_right = 984.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="RSSReader/VBoxContainer/AppBar"]
margin_top = 12.0
margin_right = 44.0
margin_bottom = 26.0
text = "Gacrux"
valign = 1

[node name="Status" type="Label" parent="RSSReader/VBoxContainer/AppBar"]
margin_left = 48.0
margin_top = 12.0
margin_right = 913.0
margin_bottom = 26.0
size_flags_horizontal = 3
align = 1
valign = 1

[node name="AddNew" type="Button" parent="RSSReader/VBoxContainer/AppBar"]
margin_left = 917.0
margin_right = 984.0
margin_bottom = 39.0
text = "Add new"
flat = true

[node name="Feeds" type="ItemList" parent="RSSReader/VBoxContainer"]
margin_top = 43.0
margin_right = 984.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="News" type="ItemList" parent="RSSReader/VBoxContainer"]
margin_top = 203.0
margin_right = 984.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="RSSReader/VBoxContainer"]
margin_top = 520.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Url" type="Label" parent="RSSReader/VBoxContainer/HBoxContainer"]
margin_right = 984.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
valign = 1
autowrap = true

[node name="Open" type="Button" parent="RSSReader/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 910.0
margin_right = 984.0
margin_bottom = 40.0
text = "Open link"
[connection signal="request_completed" from="RSSReader/HTTPRequest" to="RSSReader" method="_on_HTTPRequest_request_completed"]
[connection signal="item_selected" from="RSSReader/VBoxContainer/Feeds" to="RSSReader" method="_on_Feeds_item_selected"]
[connection signal="item_selected" from="RSSReader/VBoxContainer/News" to="RSSReader" method="_on_News_item_selected"]
[connection signal="pressed" from="RSSReader/VBoxContainer/HBoxContainer/Open" to="RSSReader" method="_on_Open_pressed"]
